v1.6.0: Major backend refactor, all dependencies updated